# CGProjects

./: .gitignore  README.md
Aergia_Beta/: CMakeLists.txt  LICENSE  aergia.sh
Aergia_Beta/examples/: CMakeLists.txt
Aergia_Beta/examples/helloAergia/: CMakeLists.txt  helloAergia.cpp
Aergia_Beta/examples/qCurv/: CMakeLists.txt  UGrid.h  main.cpp
Aergia_Beta/src/: Aergia.h
Aergia_Beta/src/graphics/: OpenGL.cpp  OpenGL.h
Aergia_Beta/src/io/: GraphicsDisplay.cpp  GraphicsDisplay.h
Aergia_Beta/src/math/: Transform.cpp  Transform.h  utils.h
Aergia_Beta/src/scene/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
MultiResolutionTetMesh/: AdaptiveTetTree.h  Makefile  MarchingTet.h  MathUtils.h  ParticleSet.h  StatUtils.h  Tetrahedron.h  main.cpp  objToMy.cpp
MultiResolutionTetMesh/datasets/: datToMy.cpp  sphere.cpp
NearestNeighbours/: Makefile  openvdbnearest.cpp
ParticleToLevelSet/: Makefile  openvdbtest.cpp
SimpleFLIP/: FLIP.h  Grid.h  GridAccessor.h  GridPtrAccessor.h  MACGrid.h  Makefile  MathUtils.hpp  ParticleSet.h  Solver.h  UGrid.h  main.cpp  testgrid.cpp  testparticleset.cpp  utils.h
